@@ -1,5 +1,9 @@
 2005-03-21  Mark McLoughlin  <markmc@redhat.com>
 
+	* sabayon.spec.in: couple more minor fixes.
+
+2005-03-21  Mark McLoughlin  <markmc@redhat.com>
+
 	* sabayon.spec.in: lots of changes from Fedora Extras
 	review.
 
